data/derived/sp14/progs/unify/prog2519.ml.out
Characters 2-9:
  f collatz;;
    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
